[package]
name = "rust-ws-chat"
version = "0.1.0"
authors = ["xuorig <mgiroux0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
tokio-stream = "*"
futures = "*"
tungstenite = "*"
log = "0.4"
env_logger = "0.8.3"
redis = { version = "0.20.0", features = ["tokio-comp"] }
